--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- Cette balise permet aux anciens navigateurs d'interpreter le code de maniere standard et de dire au navigateur quel langage il va lire. -->
-<html lang="en">
-<!-- Cette balise permet de structurer et mettre en forme le code. -->
+<html lang="fr">
+<!-- Cette balise permet de structurer et mettre en forme le code, son attribut "lang" permet de dire à la page quelle langue ont va utiliser. -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
