balises in the body

--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
     <title>Les_balises_Html</title>
 </head>
 <body>
+    <header>
+        <h1></h1>
+        <nav></nav>
+    </header>
+    <!-- La balise header sert à representer un contenue introductif ou du contenu pour aider la navigation. -->
+    <main>
+        <img src="dossierImage/nomImage" alt="#">
+        <!-- La balise img sert a integrer une image. -->
+        <aside></aside>
+        <!-- La balise aside represente une partie d'un document qui n'a pas de rapport direct avec le contenue principale. -->
+    </main>
+    <!-- La balise main est le contenu principale qui contien des sujet principale. -->
+    <footer></footer>
+    <!-- La balise footer est le pied de la page. -->
     
     <script src="js/app.js"></script>
 </body>
