balises, h1 et nav

--- a/index.html
+++ b/index.html
@@ -4,15 +4,24 @@
 <!-- Cette balise permet de structurer et mettre en forme le code, son attribut "lang" permet de dire à la page quelle langue ont va utiliser. -->
 <head>
     <meta charset="UTF-8">
+    <!-- cette balise sert a définir l'encodage des caractère en "UTF-8". -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Le X-UA-Compatible permet aux auteurs de sites web de choisir la version d'Internet Explorer. -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- La balise meta name= "viewport" va permettre de donner des instructions relatives à la taille et à l’échelle du viewport aux navigateurs mobiles afin que les différents éléments d’une page s’affichent au mieux. -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- cette balise sert à relier un fichier html à un fichier css. -->
     <title>Les_balises_Html</title>
+    <!-- Cette balise sert à definir le titre de la page. -->
 </head>
 <body>
     <header>
-        <h1></h1>
+        <h1>Titre</h1>
+        <!-- La balise h1 est la plus importante des autres balise hn elle sert à mettre un titre sur une page. -->
+        <h2>Sous-titre</h2>
+        <!-- La balise h2 est moins importante que la balise h1 on peut y mettre un sous titre. -->
         <nav></nav>
+        <!-- La balise nav sert à mettre des liens qui sont diriger ver d'autres site ou à des endroit dans la page. -->
     </header>
     <!-- La balise header sert à representer un contenue introductif ou du contenu pour aider la navigation. -->
     <main>
@@ -20,11 +29,14 @@
         <!-- La balise img sert a integrer une image. -->
         <aside></aside>
         <!-- La balise aside represente une partie d'un document qui n'a pas de rapport direct avec le contenue principale. -->
+        <article></article>
+        <!-- La balise article sert le plus souvent à contenir des informations dans un document, que ce soit dans une page ou une application. -->
     </main>
     <!-- La balise main est le contenu principale qui contien des sujet principale. -->
     <footer></footer>
     <!-- La balise footer est le pied de la page. -->
     
     <script src="js/app.js"></script>
+    <!-- Cette balise sert a insérer du code javascript dans l'html ou relier le html au fichier js. -->
 </body>
 </html>
