--- a/index.html
+++ b/index.html
@@ -25,6 +25,31 @@
     </header>
     <!-- La balise header sert à representer un contenue introductif ou du contenu pour aider la navigation. -->
     <main>
+        <ol>
+            <li>test</li>
+            <!-- La balise li sert à mettre un élément de liste. -->
+        </ol>
+        <!-- La balise ol sert à faire une liste ordonné et chaque balise li à l'intérieur sera accompagné d'un numéro c'est une liste d'étape. -->
+
+        <ul>
+            <li>test2</li>
+        </ul>
+        <!-- La balise ul sert à faire une liste désordonné elle ne représente pas un ordre précis de la liste. -->
+
+        <table border="1"> <!-- La balise table sert à crée notre tableau on peut lui appliquer un border="1". -->
+            <caption>Titre du tableau</caption>
+            <!-- La balise caption sert à mettre un titre à votre tableau. -->
+
+            <thead> <!-- La balise thead sert à mettre le titre de vos colonnes. -->
+                
+                <tr> <!-- La balise tr sert à faire une colonnes horizontal-->
+                    <th>AGE</th>
+                    <th>PRENOM</th>
+                    <th>NOM</th>
+                </tr>
+            </thead>
+        </table>
+
         <img src="dossierImage/nomImage" alt="#">
         <!-- La balise img sert a integrer une image. -->
         <aside></aside>
