--- a/index.html
+++ b/index.html
@@ -77,13 +77,15 @@
         </textarea>  <!-- Les attributs rows et cols permettent de définir la taille exacte que le textarea doit occupée, name permet de nommer la donnée qui sera envoyée au serveur lors de l'envoi du formulaire. -->
 
         <label for="animaux">Choissis un animal</label>
-        
+
         <select name="animaux" id="animaux"> <!-- La balise select sert à crée un bouton avec des options. -->
             <option value="">--choissis un animal--</option>
             <option value="chien">chien</option> <!-- La balise option créer un choix. -->
             <option value="chat">chat</option>
             <option value="loup">loup</option>
         </select>
+
+        <section></section> <!-- La balise section représente une section générique d'un document, par exemple un groupe de contenu thématique. Une section commence généralement avec un titre. -->
 
         <img src="dossierImage/nomImage" alt="#">
         <!-- La balise img sert a integrer une image. -->
