--- a/index.html
+++ b/index.html
@@ -16,15 +16,21 @@
 </head>
 <body>
     <header>
+
         <h1>Titre</h1>
         <!-- La balise h1 est la plus importante des autres balise hn elle sert à mettre un titre sur une page. -->
+
         <h2>Sous-titre</h2>
         <!-- La balise h2 est moins importante que la balise h1 on peut y mettre un sous titre. -->
+
         <nav></nav>
         <!-- La balise nav sert à mettre des liens qui sont diriger ver d'autres site ou à des endroit dans la page. -->
+
     </header>
     <!-- La balise header sert à representer un contenue introductif ou du contenu pour aider la navigation. -->
+
     <main>
+
         <ol>
             <li>test</li>
             <!-- La balise li sert à mettre un élément de liste. -->
@@ -89,12 +95,19 @@
 
         <img src="dossierImage/nomImage" alt="#">
         <!-- La balise img sert a integrer une image. -->
+
         <aside></aside>
         <!-- La balise aside represente une partie d'un document qui n'a pas de rapport direct avec le contenue principale. -->
+
         <article></article>
         <!-- La balise article sert le plus souvent à contenir des informations dans un document, que ce soit dans une page ou une application. -->
+
+        <div style="height: 50px; width: 50px; background-color: red; border: 1px"> <!-- La balise div est un conteneur générique du contenu du flux. Il n'a aucun effet sur le contenu ou la mise en page tant qu'il n'est pas mis en forme d'une manière quelconque à l'aide de css, vous pouvez définir la largeur et hauteur via le css. -->
+        </div>
+
     </main>
     <!-- La balise main est le contenu principale qui contien des sujet principale. -->
+    
     <footer></footer>
     <!-- La balise footer est le pied de la page. -->
     
